crates/talus-core/src/snapshots/talus_core__command__tests__event_all_variants.snap
---
source: crates/talus-core/src/command.rs
expression: events
---
[
  {
    "type": "NodeTypeRegistered",
    "data": {
      "id": "00000000-0000-4000-8000-000000000032",
      "name": "Task",
      "schema_version": 1,
      "allowed_properties": [
        "00000000-0000-4000-8000-000000000048"
      ],
      "allowed_children": []
    }
  },
  {
    "type": "NodeInserted",
    "data": {
      "id": "00000000-0000-4000-8000-000000000016",
      "kind": "00000000-0000-4000-8000-000000000032",
      "name": "n",
      "schema_version": 1,
      "properties": {}
    }
  },
  {
    "type": "ParentChanged",
    "data": {
      "child": "00000000-0000-4000-8000-000000000018",
      "parent": "00000000-0000-4000-8000-000000000017"
    }
  },
  {
    "type": "PropertyChanged",
    "data": {
      "node": "00000000-0000-4000-8000-000000000016",
      "pid": "00000000-0000-4000-8000-000000000048",
      "value": {
        "type": "Boolean",
        "value": true
      }
    }
  },
  {
    "type": "SubtreeRemoved",
    "data": {
      "ids": [
        "00000000-0000-4000-8000-000000000017",
        "00000000-0000-4000-8000-000000000018"
      ]
    }
  }
]
